--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PL'
 - !lcsh 'Ghost stories, Chinese'
+- GITenberg
 title: 閱微草堂筆記
 url: http://www.gutenberg.org/ebooks/23817
